<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgSelectDp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/round_bg"
            android:backgroundTint="@color/backgroundLight"
            android:padding="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_a_photo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/profile_info"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/accent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/provide_name_photo"
            android:textSize="14sp"
            android:textColor="@color/secondary_text"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/type_your_name"
            android:layout_marginHorizontal="60dp"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:maxLength="120"
            android:layout_marginTop="20dp"
            android:textColor="@color/fore"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imgSelectDp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="58dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="Next"
                android:enabled="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/prog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>