<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_partner_pref_scene"
    tools:context=".ui.activities.PartnerPrefActivity">

    <ImageView
        android:id="@+id/btBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNameSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/profile"
        android:textColor="@color/fore"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
        app:layout_constraintEnd_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toTopOf="@+id/imgProfile" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0"
        app:dividerColor="@color/fore"
        app:layout_constraintTop_toBottomOf="@id/imgProfile" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/def_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:textColor="@color/fore"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center"
                android:textColor="@color/fore" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/btPhone"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner_rippled_bg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/purple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/phone_call"
                        android:textColor="@color/fore" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/btVideo"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner_rippled_bg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingVertical="12dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_video_camera"
                        app:tint="@color/purple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/video"
                        android:textColor="@color/fore" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:alpha=".4"
                    android:text="@string/about"
                    android:textColor="@color/fore" />

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/fore"
                    android:textSize="17sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".2"
                    app:dividerColor="@color/fore" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:alpha=".4"
                    android:text="@string/shared_media_files"
                    android:textColor="@color/fore" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="12dp"
                    android:scrollbarSize="2dp">

                    <LinearLayout
                        android:id="@+id/contMedia"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".2"
                    app:dividerColor="@color/fore" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="20dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="12dp"
                        android:alpha=".56"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_notification_bell" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/notifications"
                        android:textColor="@color/fore"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchNoti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingHorizontal="4dp"
                        app:thumbTint="@color/purple" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="12dp"
                        android:alpha=".56"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_chat_lock" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/chat_lock"
                        android:textColor="@color/fore"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchChatLock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:paddingHorizontal="4dp"
                        app:thumbTint="@color/purple" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".2"
                    app:dividerColor="@color/fore" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:alpha=".4"
                    android:text="@string/chat_background"
                    android:textColor="@color/fore" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="260dp">

                    <com.tomer.chitchat.ui.views.DoodleView
                        android:id="@+id/imgBg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="24dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <include
                            android:id="@+id/item1"
                            layout="@layout/msg_item" />

                        <include
                            android:id="@+id/item2"
                            layout="@layout/msg_item" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:alpha=".2"
                    app:dividerColor="@color/fore" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btWallpaper"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/corner_rippled_bg"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_wallpaper"
                        app:tint="@color/purple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/wallpaper"
                        android:textColor="@color/purple" />
                </LinearLayout>
            </LinearLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="120dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>
